# south-park-tower-defence-recomp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STATUS.md  south_park_td_manifest.toml
config/: README.md  sp_functions.toml
docs/: BUILD.md  CODEGEN-ASLOCAL-PLAN.md  CODEGEN-SIZE-PLAN.md  DRAW-BATCHING-STEP1-RECIPE.md  DRAW-BATCHING-STEP2-PLAN.md  DRAW-GROUP-BREAKDOWN.md  FLOOR-CP-TRANSLATION-REPORT.md  FLOOR-FRONTEND-REBASELINE-REPORT.md  FLOOR-GPR-ASLOCAL-GONOGO.md  FLOOR-STRUCTURAL-CONCLUSION-REPORT.md  HISTORY.md  HLE-PHASE0-PROGRESS.md  NEXT-SESSION-AUDIO-OPT-PROMPT.md  NEXT-SESSION-PROMPT.md  NEXT-SESSION-VARIANTA-PROMPT.md  P2-LEAF-INLINE-DESIGN.md  PERF-OVERNIGHT-PLAN.md  ROADMAP-V2.md  RUN-linux.md  RUN.md  hle-doorbell-provenance-probe.patch
docs/archive/: AUDIO-INVESTIGATION-REPORT.md  AUDIO-OPT-REPORT.md  CODEGEN-ASLOCAL-LOG.md  CODEGEN-ASLOCAL-PLAN.md  CODEGEN-ASLOCAL-REPORT.md  CODEGEN-SIZE-LOG.md  CODEGEN-SIZE-PLAN.md  CODEGEN-SIZE-REPORT.md  FLOOR-AUDIO-DESPIN-REPORT.md  FLOOR-CP-ELISION-REPORT.md  FLOOR-GPR-ASLOCAL-GONOGO.md  FLOOR-LEAF-INLINE-REPORT.md  FLOOR-MCMODEL-MEDIUM-REPORT.md  FLOOR-OVEREXEC-REPORT.md  FLOOR-PGO-MEDIUM-REPORT.md  FLOOR-REOPENED-NATURAL-LOAD-REPORT.md  FLOOR-SO-MEDIUM-REPORT.md  FLOOR-STRUCTURAL-CONCLUSION-REPORT.md  HLE-GRAPHICS-SPIKE-REPORT.md  HLE-PHASE0-PROGRESS.md  HLE-PHASE1-FINDINGS.md  NEXT-SESSION-HLE-PROMPT.md  (+4 more)
launcher/: BACKLOG.md  INTEGRATION.md  package_win64.ps1
patches/: 0001-build-mcmodel-medium-recomp-rexglue-helper-tweaks.patch  0001-rexglue-thread-r1-stack-headroom.patch  0002-codegen-implement-lmw-as-local-context-decouple-db16.patch  0002-rexglue-mainthread-r3-entry-sentinel.patch  0003-platform-SEH-forced-unwind-fix-POSIX-first-cut-SEH-r.patch  0003-rexglue-codegen-implement-lmw.patch  0004-core-timer-queue-blocking-wait-strategy-kill-the-16..patch  0004-rexglue-entry-point-override-envvar.patch  0005-boot-continuation-reenter-and-stack-zero.patch  0005-graphics-command-processor-boot-present-fence-fixes-.patch  0006-graphics-vulkan-texture-shared-memory-bring-up-fixes.patch  0007-audio-SDL-driver-bring-up-fixes.patch  0007-seh-exception-recovery-first-cut.patch  0008-input-analog-left-stick-via-REX_INPUT_FILE-autonomou.patch  0009-kernel-xam-save-user-net-msg-input-paused-cvar-gated.patch  0009-rexglue-stfs-direct-mount.patch  0010-kernel-xboxkrnl-debug-io-rtl-fixes.patch  0011-system-loader-r1-stack-headroom-entry-override-boot-.patch  0012-perf-floor-GPU-fence-block-on-signal-CP-WAIT_REG_MEM.patch  0013-perf-floor-skip-unchanged-float-bool-loop-shader-con.patch  0014-perf-floor-generalize-the-unchanged-write-skip-to-AL.patch  0015-perf-despin-block-the-audio-worker-multi-wait-conten.patch  0016-perf-trace-inline-TraceWriter-WritePacketStart-End-e.patch  0016-perf-trace-inline-the-hot-TraceWriter-methods-per-ho.patch  0017-graphics-pacing-diag-v2-swap-cadence-chain-budget-li.patch  0018-perf-host-freq_keeper-low-priority-spinner-defeats-t.patch  0019-perf-overlap-step1-swap-fence-eager-push-pacing-diag.patch  README.md  rexglue-sdk-current-full.patch
src/: README.md  app.rc  hle_graphics.cpp  main.cpp  south_park_td_app.h  stubs.cpp
tools/: README.md  build-linux.sh  callgraph.py  cdb_cmds.txt  cdb_eh.txt  cdb_trace.txt  cdb_xstart.txt  find_crt.py  find_crt_initarray.py  find_init_arrays.py  find_initarray.py  find_initterm.py  find_maincrt.py  find_security_cookie.py  find_setjmp.py  find_xrefs.py  find_zeroref_roots.py  fix_recomp_labels.py  gamectl.sh  gen_missing_funcs.py  ghidra_dump_roots.py  ghidra_find_main.py  ghidra_pre_funcs.py  parse_ftrace.py  pdata.py  pe_inspect.py  ppc_dis.py  scan_recomp.py  stfs_extract.py  stfs_recon.py  xex_decrypt.py  xex_recon.py
varianta/: .gitignore  A2B-MONUMENTAL-PROMPT.md  GPU-RESOURCE-BUILD-PLAN.md  MORNING-REPORT-2026-06-07.md  MORNING-REPORT-2026-06-08.md  MORNING-REPORT.md  NEXT-SESSION-GPU-PROMPT.md  NEXT-SESSION-PROMPT.md  NIGHT-LOG.md  README.md  RENDERER-DESIGN.md  RENDERER-PHASE-PLAN.md  sp_switch_tables.toml  sp_xenon.toml
varianta/runtime/: CMakeLists.txt  IMPORTS-TODO.md  README.md  gen_import_stubs.py  host_stub.cpp  kernel.cpp  kernel.h  menu_shaders.h  menutex_shaders.h  rex_indirect.h  rex_render.h  rex_texture.h  runtime.cpp  test_shaders.h  vulkan_render.cpp
(+161 files in other folders)
